--- a/styles.css
+++ b/styles.css
@@ -1,83 +1,109 @@
 html {
     /* CSS variables */
 
-    --color-grey-100: rgb(236, 236, 236); /* name of the varaibale */
-   
-    background-color: var(--color-grey-100); /* refering to our declared avirable */
+    --color-grey-100: rgb(236, 236, 236);
+    /* name of the varaibale */
+    --color-grey-400: rgb(134, 134, 134);
+    --color-grey-600: rgb(58, 58, 58);
+    --color-grey-900: rgb(41, 41, 41);
+
+    --color-blue-100: rgb(167, 226, 255);
+    --color-blue-400: rgb(0, 170, 255);
+    /* var for font-size */
+    --size-1: 18px;
+    --size-5: 50px;
+
+
+
+    background-color: var(--color-grey-100);
+    /* refering to our declared avirable */
     font-family: 'Krub', sans-serif;
     font-weight: 400;
 
-   
-  }
-  
-  .card-container {
-    background-color: rgb(255, 255, 255);
+
+}
+
+.card-container {
+    background-color: var(--color-grey-100);
     width: 350px;
     margin: 50px auto;
     box-shadow: 3px 3px 10px rgb(201, 200, 200);
-  }
-  
-  h1 {
-    color: rgb(58, 58, 58);
+    /* transition need to be defined in the initial state of the element you are targeting not hover */
+    transition: transform 0.5s ease-out 0s; /* seconds it takes the transformaiton and secons takes to start  */
+
+}
+
+.card-container:hover {
+    /* working with hover transformaitons */
+     transform: scale(1.05);
+    /*     transform: rotate(180deg);
+ */
+ 
+
+}
+
+h1 {
+    color: var(--color-grey-600);
     text-align: left;
     padding: 30px 50px 0px 50px;
     margin: 10px 0;
     font-family: 'Zilla Slab', serif;
     font-weight: 600;
-  }
-  
-  .card-info {
-    color: rgb(134, 134, 134);
+}
+
+
+.card-info {
+    color: var(--color-grey-600);
     text-align: left;
     padding: 0 50px;
     margin: 10px 0 30px 0;
-  }
-  
-  .price {
-    color: rgb(41, 41, 41);
-    background-color: rgb(167, 226, 255);
+}
+
+.price {
+    color: var(--color-grey-900);
+    background-color: var(--color-blue-100);
     text-align: center;
     margin: 30px auto 10px auto;
-    font-size: 50px;
+    font-size: var(--size-5);
     font-weight: 600;
-  }
-  
-  .price-info {
-    color: rgb(134, 134, 134);
+}
+
+.price-info {
+    color: var(--color-grey-400);
     text-align: center;
     margin: 10px 0 30px 0;
     padding: 0 50px;
-  }
-  
-  .sub-details {
+}
+
+.sub-details {
     width: 300px;
     margin: 30px 50px;
-  }
-  
-  
-  .sub-feature {
+}
+
+
+.sub-feature {
     display: flex;
-  }
-  
-  .icon {
+}
+
+.icon {
     display: flex;
-    width: 10px;
-  }
-  
-  .sub-feature-text {
-    color: rgb(58, 58, 58);
+    width: 15px;
+}
+
+.sub-feature-text {
+    color: var(--color-grey-600);
     padding: 2px;
-    margin: 5px;   
-  }
-  
-  
-  .button-container {
+    margin: 5px;
+}
+
+
+.button-container {
     text-align: center;
     margin: 30px 0 0 0;
-  }
-  
-  .button {
-    color: rgb(0, 170, 255);
+}
+
+.button {
+    color: var(--color-blue-400);
     text-decoration: none;
     text-transform: uppercase;
     display: inline-block;
@@ -85,12 +111,16 @@ html {
     padding: 10px;
     margin: 0 0 30px 0;
     border: 2px solid rgb(224, 224, 224);
-    font-size: 18px;
+    font-size: var(--size-1);
     font-weight: 600;
-  }
-  
-  .button:hover {
+    transition: background-color 1.5s ease-out 0s; /* seconds it takes the transformaiton and secons takes to start  */
+
+}
+
+.button:hover {
     color: white;
-    background-color: rgb(0, 170, 255);
+    background-color: var(--color-blue-400);
     border: 2px solid rgb(255, 255, 255);
-  }
+    transition: background-color 1.5s ease-out 0s; /* seconds it takes the transformaiton and secons takes to start  */
+
+}
